Fix a lot of PMD issues. Still 262 to go in production code.